Added interactivity with the selected page/eventMessage, added a pin/unpin function, added a function to get information about page.

--- a/585988802/.gitignore
+++ b/585988802/.gitignore
@@ -8,14 +8,11 @@ assets
 
 .build
 
-
 integration_test
 
 ios
 
 test
-
-windows
 
 .flutter-plugins
 
@@ -27,6 +24,6 @@ windows
 
 analysis_options.yaml
 
-project_app.iml.iml
+project_app.iml
 
 pubspec.lock
