--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_chat_bubble: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
