--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -23,12 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_chat_bubble: ^1.0.2
+  chat_bubbles: ^0.7.8+2
+  #flutter_chat_bubble: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
