--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   chat_bubbles: ^0.7.8+2
-  #flutter_chat_bubble: ^1.0.2
+  flutter_chat_bubble: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
