Sending events to other categories, deleting and editing events using a swipe, searching for an event, switching to the BloC architecture. Added: the ability to delete and edit an event using a swipe, an event search function, a function to send an event to another directory (another category). The adaptability of the event_message size and bottomSheet has been completed. The BloC architecture for the home screen is prepared.

--- a/585988802/.gitignore
+++ b/585988802/.gitignore
@@ -2,17 +2,7 @@
 
 .idea
 
-.android
-
-assets
-
 .build
-
-integration_test
-
-ios
-
-test
 
 .flutter-plugins
 
@@ -27,3 +17,9 @@ analysis_options.yaml
 project_app.iml
 
 pubspec.lock
+/ios/
+/integration_test/
+/assets/
+/test/
+/web/
+/android/
