--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   chat_bubbles: ^0.7.8+2
   flutter_chat_bubble: ^1.0.2
+  image_picker: ^0.6.7+22
 
 
   # The following adds the Cupertino Icons font to your application.
