--- a/767970405/pubspec.yaml
+++ b/767970405/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.6.7+22
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
