--- a/978913784/pubspec.yaml
+++ b/978913784/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   intl: ^0.16.1
   image_picker: ^0.6.6+5
   flutter_staggered_grid_view: ^0.3.4
+  flutter_bloc: ^6.1.2
+  tuple: ^1.0.3
 
 dev_dependencies:
   flutter_test:
