--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -1,5 +1,5 @@
 name: chat_journal
-description: WTF Lab project.
+description: Chat Journal – daily journal using chat interface.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -23,9 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  chat_bubbles: ^0.7.8+2
-  flutter_chat_bubble: ^1.0.2
-  image_picker: ^0.6.7+22
+  flutter_bloc: ^6.1.0
+  equatable: ^1.2.5
+  bubble: ^1.1.9+1
 
 
   # The following adds the Cupertino Icons font to your application.
