--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_bloc: ^6.1.0
   equatable: ^1.2.5
   bubble: ^1.1.9+1
+  image_picker: ^0.6.7+22
 
 
   # The following adds the Cupertino Icons font to your application.
