--- a/767970405/pubspec.yaml
+++ b/767970405/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.6.7+22
   provider: ^4.3.3
+  flutter_bloc: ^6.1.0
 
 dev_dependencies:
   flutter_test:
