--- a/767970405/pubspec.yaml
+++ b/767970405/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^0.6.7+22
   provider: ^4.3.3
   flutter_bloc: ^6.1.0
+  equatable: ^1.2.5
 
 dev_dependencies:
   flutter_test:
