--- a/978913784/pubspec.yaml
+++ b/978913784/pubspec.yaml
@@ -16,7 +16,11 @@ dependencies:
   image_picker: ^0.6.6+5
   flutter_staggered_grid_view: ^0.3.4
   flutter_bloc: ^6.1.2
+  path: ^1.7.0
+  shared_preferences: ^0.5.12+4
+  sqflite: ^1.3.2+3
   tuple: ^1.0.3
+
 
 dev_dependencies:
   flutter_test:
