--- a/479827527/pubspec.yaml
+++ b/479827527/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_appd
+name: flutter_lesson_1
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -28,6 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  clipboard_manager: ^0.0.4
+  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
