--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   equatable: ^1.2.5
   bubble: ^1.1.9+1
   image_picker: ^0.6.7+22
-  footer: ^0.0.3
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
