--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   bubble: ^1.1.9+1
   image_picker: ^0.6.7+22
   intl: ^0.16.1
+  shared_preferences: ^0.5.12+4
 
 
   # The following adds the Cupertino Icons font to your application.
