--- a/585988802/pubspec.yaml
+++ b/585988802/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   sqflite: ^1.3.0
   path: ^1.7.0
+  animated_splash_screen: ^1.0.1+2
 
 dev_dependencies:
   flutter_test:
