--- a/619740324/pubspec.yaml
+++ b/619740324/pubspec.yaml
@@ -24,9 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  intl: ^0.16.0
+  clipboard_manager: ^0.0.4
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
