Migrate app to SQLite database

--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   image_picker: ^0.6.7+22
   intl: ^0.16.1
   shared_preferences: ^0.5.12+4
+  path: ^1.8.0
+  sqflite: ^2.0.0+2
 
 
   # The following adds the Cupertino Icons font to your application.
