--- a/585988802/pubspec.yaml
+++ b/585988802/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   sqflite: ^1.3.0
   path: ^1.7.0
   animated_splash_screen: ^1.0.1+2
+  share: ^0.6.5+4
 
 dev_dependencies:
   flutter_test:
