--- a/479827527/pubspec.yaml
+++ b/479827527/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   clipboard_manager: ^0.0.4
+  flutter_bloc: ^6.1.2
   intl: ^0.16.0
 
 dev_dependencies:
