--- a/522774998/pubspec.yaml
+++ b/522774998/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.5 <3.0.0"
 
 dependencies:
   intl: ^0.16.1
@@ -27,9 +27,12 @@ dependencies:
   flutter_bloc: ^6.1.0
   equatable: ^2.0.0
 
+  shared_preferences: ^0.5.12+4
+  sqflite: ^1.3.0
+  path: ^1.7.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
