--- a/767970405/pubspec.yaml
+++ b/767970405/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^1.2.5
   sqflite: ^2.0.0+2
   path_provider: ^2.0.1
+  shared_preferences: ^2.0.4
 
 dev_dependencies:
   flutter_test:
