--- a/438173465/pubspec.yaml
+++ b/438173465/pubspec.yaml
@@ -23,8 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  json_annotation: ^3.0.1
+  path_provider: ^2.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
@@ -32,6 +32,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.0
+  json_serializable: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
