--- a/722723006/pubspec.yaml
+++ b/722723006/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   intl: ^0.16.0
   clipboard_manager: ^0.0.4
   flutter_bloc: ^6.1.2
+  sqflite: ^1.3.2+4
+  shared_preferences: ^2.0.5
+  path: ^1.7.0
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
