--- a/978913784/pubspec.yaml
+++ b/978913784/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.4
   flutter_bloc: ^6.1.2
   path: ^1.7.0
-  shared_preferences: ^0.5.12+4
+  path_provider: ^2.0.1
+  shared_preferences: ^2.0.5
   sqflite: ^1.3.2+3
   tuple: ^1.0.3
 
