--- a/978913784/pubspec.yaml
+++ b/978913784/pubspec.yaml
@@ -18,9 +18,9 @@ dependencies:
   flutter_bloc: ^6.1.2
   path: ^1.7.0
   path_provider: ^2.0.1
+  share: ^2.0.1
   shared_preferences: ^2.0.5
   sqflite: ^1.3.2+3
-  tuple: ^1.0.3
 
 
 dev_dependencies:
