--- a/978913784/pubspec.yaml
+++ b/978913784/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   clipboard: ^0.1.2+8
+  hashtagable: ^1.0.8
   intl: ^0.16.1
   image_picker: ^0.6.6+5
   flutter_staggered_grid_view: ^0.3.4
