--- a/522774998/pubspec.yaml
+++ b/522774998/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^6.1.0
   equatable: ^2.0.0
-
+  image_picker: ^0.6.7+22
   shared_preferences: ^0.5.12+4
   sqflite: ^1.3.0
   path: ^1.7.0
