--- a/473252049/ios/Runner/Info.plist
+++ b/473252049/ios/Runner/Info.plist
@@ -41,5 +41,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSFaceIDUsageDescription</key>
+<string>My app stores personal data, so it needs to have biometric authentication</string>
 </dict>
 </plist>
