--- a/479827527/pubspec.yaml
+++ b/479827527/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  sqflite:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -31,6 +31,9 @@ dependencies:
   clipboard_manager: ^0.0.4
   flutter_bloc: ^6.1.2
   intl: ^0.16.0
+  shared_preferences:
+  path: ^1.7.0
+
 
 dev_dependencies:
   flutter_test:
