--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path: ^1.8.0
   sqflite: ^2.0.0+2
   local_auth: ^1.1.0
+  url_launcher: ^6.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
