--- a/722723006/pubspec.yaml
+++ b/722723006/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   clipboard_manager: ^0.0.4
   flutter_bloc: ^6.1.2
   sqflite: ^1.3.2+4
+  image_picker: ^0.6.6+5
+  path_provider: ^2.0.1
   shared_preferences: ^2.0.5
   path: ^1.7.0
   cupertino_icons: ^1.0.0
