--- a/619740324/pubspec.yaml
+++ b/619740324/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.16.0
   clipboard_manager: ^0.0.4
   cupertino_icons: ^1.0.0
+  flutter_bloc: ^6.1.2
 
 dev_dependencies:
   flutter_test:
