--- a/767970405/pubspec.yaml
+++ b/767970405/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  image_picker: ^0.6.7+22
+  image_picker: ^0.7.3
   provider: ^4.3.3
   flutter_bloc: ^6.1.0
   bloc: ^6.1.0
@@ -37,6 +37,8 @@ dependencies:
   path_provider: ^2.0.1
   shared_preferences: ^2.0.4
   intl: ^0.17.0
+  local_auth: ^1.1.0
+  get_it: ^6.0.0
 
 dev_dependencies:
   flutter_test:
