--- a/978913784/pubspec.yaml
+++ b/978913784/pubspec.yaml
@@ -18,8 +18,9 @@ dependencies:
   hashtagable: ^1.0.8
   intl: ^0.16.1
   image_picker: ^0.6.6+5
-  flutter_staggered_grid_view: ^0.3.4
   flutter_bloc: ^6.1.2
+  flutter_slidable: ^0.5.7
+  flutter_staggered_grid_view: ^0.3.4
   path: ^1.7.0
   path_provider: ^2.0.1
   share: ^2.0.1
