--- a/522774998/pubspec.yaml
+++ b/522774998/pubspec.yaml
@@ -21,18 +21,19 @@ environment:
   sdk: ">=2.10.5 <3.0.0"
 
 dependencies:
-  intl: ^0.16.1
+  intl: ^0.17.0
   flutter:
     sdk: flutter
   flutter_bloc: ^6.1.0
   equatable: ^2.0.0
-  image_picker: ^0.6.7+22
+  image_picker: ^0.7.3
   shared_preferences: ^0.5.12+4
   sqflite: ^1.3.0
   path: ^1.7.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  local_auth: ^1.1.0
 
 dev_dependencies:
   flutter_test:
