--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sqflite: ^2.0.0+2
   local_auth: ^1.1.0
   url_launcher: ^6.0.2
+  share: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
