--- a/767970405/android/app/src/main/AndroidManifest.xml
+++ b/767970405/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.my_chat_journal">
+
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
    <application
         android:label="my_chat_journal"
         android:icon="@mipmap/ic_launcher">
