--- a/438173465/pubspec.yaml
+++ b/438173465/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
     sdk: flutter
   json_annotation: ^3.0.1
   path_provider: ^2.0.1
+  sqflite: ^2.0.0+3
+  grouped_list: ^3.7.1
+  intl: ^0.17.0
+  image_picker: ^0.7.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
