--- a/722723006/pubspec.yaml
+++ b/722723006/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   sqflite: ^1.3.2+4
   image_picker: ^0.6.6+5
   path_provider: ^2.0.1
+  share: ^2.0.1
+  hashtagable: ^1.0.7
   shared_preferences: ^2.0.5
   path: ^1.7.0
   cupertino_icons: ^1.0.0
