--- a/522774998/pubspec.yaml
+++ b/522774998/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   shared_preferences: ^0.5.12+4
   sqflite: ^1.3.0
   path: ^1.7.0
+  share: ^2.0.1
+  hashtagable: ^1.0.0
+  splashscreen: ^1.3.5
+  photo_view: ^0.11.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
@@ -57,6 +61,13 @@ flutter:
         - asset: fonts/Quicksand-Light.ttf
         - asset: fonts/Quicksand-Medium.ttf
         - asset: fonts/Quicksand-SemiBold.ttf
+  assets:
+    - images/splashScreen.png
+    - images/black.jpg
+    - images/light.jpg
+    - images/planets.jpg
+    - images/blue.jpg
+    - images/start.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
