--- a/619740324/pubspec.yaml
+++ b/619740324/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   clipboard_manager: ^0.0.4
   cupertino_icons: ^1.0.0
   flutter_bloc: ^6.1.2
+  sqflite: ^1.3.2+4
+  shared_preferences:
+  path: ^1.7.0
 
 dev_dependencies:
   flutter_test:
