Migrate to flutter_parsed_text from custom tags realization

--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   local_auth: ^1.1.0
   url_launcher: ^6.0.2
   share: ^2.0.1
+  flutter_parsed_text: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
