--- a/978913784/pubspec.yaml
+++ b/978913784/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   share: ^2.0.1
   shared_preferences: ^2.0.5
   sqflite: ^1.3.2+3
+  charts_flutter: ^0.10.0
 
 dev_dependencies:
   flutter_test:
