--- a/522774998/pubspec.yaml
+++ b/522774998/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   hashtagable: ^1.0.0
   splashscreen: ^1.3.5
   photo_view: ^0.11.1
+  page_transition: ^1.1.7+6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
