--- a/722723006/pubspec.yaml
+++ b/722723006/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.0.5
   path: ^1.7.0
   cupertino_icons: ^1.0.0
+  auto_animated: ^2.0.2
 
 dev_dependencies:
   flutter_test:
