--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^6.0.2
   share: ^2.0.1
   flutter_parsed_text: ^2.1.0
+  charts_flutter: ^0.10.0
 
 
   # The following adds the Cupertino Icons font to your application.
