--- a/522774998/pubspec.yaml
+++ b/522774998/pubspec.yaml
@@ -39,9 +39,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   local_auth: ^1.1.0
+  charts_flutter: ^0.10.0
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  flutter_driver:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
