--- a/522774998/android/app/src/main/AndroidManifest.xml
+++ b/522774998/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.try_bloc_app">
    <application
         android:label="Chat Journal"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
