--- a/473252049/pubspec.yaml
+++ b/473252049/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   share: ^2.0.1
   flutter_parsed_text: ^2.1.0
   charts_flutter: ^0.10.0
+  photo_view: ^0.11.1
 
 
   # The following adds the Cupertino Icons font to your application.
