--- a/767970405/android/app/src/main/AndroidManifest.xml
+++ b/767970405/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.my_chat_journal">
 
     <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+
    <application
-        android:label="my_chat_journal"
+
+    android:label="my_chat_journal"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -39,5 +42,18 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+       <provider
+           android:name="androidx.core.content.FileProvider"
+           android:authorities="${applicationId}.com.shekarmudaliyar.social_share"
+           android:exported="false"
+           android:grantUriPermissions="true"
+           tools:replace="android:authorities">
+           <meta-data
+               android:name="android.support.FILE_PROVIDER_PATHS"
+               android:resource="@xml/filepaths" />
+       </provider>
+
+       android:requestLegacyExternalStorage="true"
     </application>
 </manifest>
