--- a/354313932/pubspec.yaml
+++ b/354313932/pubspec.yaml
@@ -25,9 +25,11 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.21.0+1
 
 dev_dependencies:
   flutter_test:
