--- a/619740324/pubspec.yaml
+++ b/619740324/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   sqflite: ^1.3.2+4
   shared_preferences:
   path: ^1.7.0
+  image_picker: ^0.6.6+5
+  path_provider:
+
 
 dev_dependencies:
   flutter_test:
