--- a/767970405/pubspec.yaml
+++ b/767970405/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   share: ^2.0.1
   http: ^0.13.1
   splashscreen: ^1.3.5
+  charts_flutter: ^0.10.0
 
 dev_dependencies:
   flutter_test:
