--- a/619740324/pubspec.yaml
+++ b/619740324/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   path: ^1.7.0
   image_picker: ^0.6.6+5
   path_provider:
-
+  hashtagable:
+  share:
 
 dev_dependencies:
   flutter_test:
