--- a/354313932/pubspec.yaml
+++ b/354313932/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.21.0+1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
