--- a/354313932/pubspec.yaml
+++ b/354313932/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.21.0+1
   intl: ^0.17.0
+  fluttertoast: ^8.0.6
 
 dev_dependencies:
   flutter_test:
