--- a/1608418138/wtf/pubspec.yaml
+++ b/1608418138/wtf/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  bloc: ^7.0.0
+  shared_preferences: ^2.0.5
+  flutter_bloc: ^7.0.0
 
 dev_dependencies:
   flutter_test:
