--- a/396575457/pubspec.yaml
+++ b/396575457/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^6.1.2
+  image_picker: ^0.6.6+5
 
 
   # The following adds the Cupertino Icons font to your application.
