--- a/317918473/pubspec.yaml
+++ b/317918473/pubspec.yaml
@@ -17,7 +17,10 @@ dependencies:
   flutter_bloc: ^7.0.1
   flutter_svg: ^0.22.0
   image_picker: ^0.7.5
-  
+  path: ^1.8.0
+  shared_preferences: ^2.0.6
+  sqflite: ^2.0.0+3
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
