--- a/358251526/pubspec.yaml
+++ b/358251526/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_bloc: ^7.0.1
   equatable: ^2.0.0
   shared_preferences: ^2.0.6
+  sqflite: ^1.3.2+4
+  path_provider: ^2.0.1
 
 
 
