--- a/1050483244/pubspec.yaml
+++ b/1050483244/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   jiffy: ^4.1.0
+  image_picker: ^0.8.2
 
 dev_dependencies:
   flutter_test:
