Add Event Screen, fixes bugs from the previous task

--- a/512180323/personal_chat/pubspec.yaml
+++ b/512180323/personal_chat/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.8.2
+  jiffy: ^4.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
