--- a/585562626/pubspec.yaml
+++ b/585562626/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl:
-
+  permission_handler: ^8.1.4+2
+  image_picker: ^0.7.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
