--- a/467088396/pubspec.yaml
+++ b/467088396/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
-  flutter_icons: ^1.1.0
+  intl: ^0.17.0
+  image_picker: ^0.8.2
 
 dev_dependencies:
   flutter_test:
