--- a/585562626/pubspec.yaml
+++ b/585562626/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path: ^1.8.0
   shared_preferences: ^2.0.6
   sqflite: ^2.0.0+3
+  local_auth: ^1.1.6
 
 dev_dependencies:
   flutter_test:
