--- a/585562626/pubspec.yaml
+++ b/585562626/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^2.0.6
   sqflite: ^2.0.0+3
   local_auth: ^1.1.6
+  hashtagable: ^2.0.2
 
 dev_dependencies:
   flutter_test:
