--- a/585562626/pubspec.yaml
+++ b/585562626/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   sqflite: ^2.0.0+3
   local_auth: ^1.1.6
   hashtagable: ^2.0.2
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
