--- a/1352191674/chat_journal/pubspec.yaml
+++ b/1352191674/chat_journal/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.2
   provider: ^5.0.0
+  flutter_bloc: ^7.0.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
