--- a/585562626/pubspec.yaml
+++ b/585562626/pubspec.yaml
@@ -39,6 +39,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.2.1
+
+flutter_native_splash:
+  color: '#ffffff'
+  image: assets/splash.png
+  color_dark: '#1a1a1a'
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
