--- a/585562626/pubspec.yaml
+++ b/585562626/pubspec.yaml
@@ -40,6 +40,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_native_splash: ^1.2.1
+  fl_chart: ^0.36.4
+  collection: ^1.15.0
 
 flutter_native_splash:
   color: '#ffffff'
