--- a/1352191674/chat_journal/pubspec.yaml
+++ b/1352191674/chat_journal/pubspec.yaml
@@ -27,9 +27,11 @@ dependencies:
   image_picker: ^0.8.2
   provider: ^5.0.0
   flutter_bloc: ^7.0.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^2.0.5
+  sqflite: ^1.3.2+4
+  path: ^1.7.0
+  equatable: ^2.0.0
+  path_provider: ^2.0.1
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
