--- a/984008919/pubspec.yaml
+++ b/984008919/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  clipboard: ^0.1.2+8
+  flutter_chat_bubble: ^2.0.0
+
+
 
 dev_dependencies:
   flutter_test:
