--- a/466347603/pubspec.yaml
+++ b/466347603/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.3+2
+  flutter_bloc: ^7.1.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
