--- a/1073212575/chat_journal/pubspec.yaml
+++ b/1073212575/chat_journal/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   hovering: ^1.0.4
+  jiffy: ^4.1.0
+  image_picker: ^0.8.2
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
