--- a/781068510/pubspec.yaml
+++ b/781068510/pubspec.yaml
@@ -22,8 +22,9 @@ environment:
 
 dependencies:
   intl: 0.17.0
-
-  provider: ^4.3.2+3
+  flutter_bloc: ^7.2.0
+  provider: ^6.0.0
+  flutter_slidable: ^0.6.0
 
   flutter:
     sdk: flutter
