--- a/1352191674/chat_journal/pubspec.yaml
+++ b/1352191674/chat_journal/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   equatable: ^2.0.0
   path_provider: ^2.0.1
   cupertino_icons: ^1.0.2
-
+  hydrated_bloc: ^7.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
