--- a/1017646504/pubspec.yaml
+++ b/1017646504/pubspec.yaml
@@ -23,6 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^7.0.0
+  flutter_bloc: ^7.2.0
+  tuple: ^2.0.0
+  image_picker: ^0.8.3+3
+  flutter_staggered_grid_view: ^0.4.0
+  intl: ^0.17.0
+  clipboard: ^0.1.3
+  cubit: ^0.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
