--- a/467088396/pubspec.yaml
+++ b/467088396/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_svg: ^0.22.0
   intl: ^0.17.0
   image_picker: ^0.8.2
+  flutter_bloc: ^7.0.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
