--- a/1352191674/chat_journal/android/app/src/main/AndroidManifest.xml
+++ b/1352191674/chat_journal/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.chat_journal">
    <application
         android:label="chat_journal"
