--- a/1352191674/chat_journal/pubspec.yaml
+++ b/1352191674/chat_journal/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   provider: ^5.0.0
   flutter_bloc: ^7.0.0
   shared_preferences: ^2.0.5
-  sqflite: ^1.3.2+4
+  sqflite: ^2.0.0+4
   path: ^1.7.0
   equatable: ^2.0.0
   path_provider: ^2.0.1
   cupertino_icons: ^1.0.2
   hydrated_bloc: ^7.0.1
+  hashtagable: ^2.0.2+1
+  share: ^2.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
