--- a/781068510/pubspec.yaml
+++ b/781068510/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   flutter_bloc: ^7.2.0
   provider: ^6.0.0
   flutter_slidable: ^0.6.0
+  equatable: ^2.0.3
+  sqflite: ^2.0.0+4
+  path_provider:
+  shared_preferences:
 
   flutter:
     sdk: flutter
