--- a/1017646504/pubspec.yaml
+++ b/1017646504/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   intl: ^0.17.0
   clipboard: ^0.1.3
   cubit: ^0.1.2
+  shared_preferences: ^2.0.7
+  path: ^1.8.0
+  sqflite: ^2.0.0+4
 
 
   # The following adds the Cupertino Icons font to your application.
