add timeline_page and filter_page

--- a/1352191674/chat_journal/pubspec.yaml
+++ b/1352191674/chat_journal/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   hydrated_bloc: ^7.0.1
   hashtagable: ^2.0.2+1
   share: ^2.0.4
+  auto_animated: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
