--- a/1352191674/chat_journal/pubspec.yaml
+++ b/1352191674/chat_journal/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   hashtagable: ^2.0.2+1
   share: ^2.0.4
   auto_animated: ^3.0.0
+  charts_flutter: ^0.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
