--- a/1073212575/chat_journal/pubspec.yaml
+++ b/1073212575/chat_journal/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   jiffy: ^4.1.0
   image_picker: ^0.8.2
   shared_preferences: ^2.0.7
+  equatable: ^ 2.0.2
+  flutter_bloc: ^7.0.0
+  bloc: ^7.0.0
 
 dev_dependencies:
   flutter_test:
