--- a/781068510/pubspec.yaml
+++ b/781068510/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_slidable: ^0.6.0
   equatable: ^2.0.3
   sqflite: ^2.0.0+4
+  image_picker: ^0.8.0
   path_provider:
   shared_preferences:
 
