--- a/781068510/pubspec.yaml
+++ b/781068510/pubspec.yaml
@@ -18,18 +18,18 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   intl: 0.17.0
-  flutter_bloc: ^7.2.0
-  provider: ^6.0.0
+  flutter_bloc: ^7.2.1
+  provider: ^6.0.1
   flutter_slidable: ^0.6.0
-  equatable: ^2.0.3
   sqflite: ^2.0.0+4
-  image_picker: ^0.8.0
-  path_provider:
-  shared_preferences:
+  image_picker: ^0.8.4+2
+  path_provider: ^2.0.5
+  shared_preferences: ^2.0.8
+  local_auth: ^1.1.8
 
   flutter:
     sdk: flutter
