--- a/608754191/pubspec.yaml
+++ b/608754191/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
    sdk: flutter
   intl: ^0.17.0
   flutter_bloc: ^7.3.0
-
+  shared_preferences: ^2.0.6
+  equatable: ^2.0.3
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
