--- a/1017646504/pubspec.yaml
+++ b/1017646504/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   bloc: ^7.0.0
-  flutter_bloc: ^7.2.0
+  flutter_bloc: ^7.0.0
   tuple: ^2.0.0
   image_picker: ^0.8.3+3
   flutter_staggered_grid_view: ^0.4.0
@@ -40,6 +40,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.4
+  share: ^2.0.4
+  hashtagable: ^2.0.2+1
+
 
 dev_dependencies:
   flutter_test:
