--- a/608754191/pubspec.yaml
+++ b/608754191/pubspec.yaml
@@ -11,6 +11,9 @@ environment:
 dependencies:
   flutter:
    sdk: flutter
+  sqflite: ^2.0.0+4
+  path: ^1.8.0
+  path_provider: ^2.0.1
   intl: ^0.17.0
   flutter_bloc: ^7.3.0
   shared_preferences: ^2.0.6
