--- a/1017646504/pubspec.yaml
+++ b/1017646504/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   path_provider: ^2.0.4
   share: ^2.0.4
   hashtagable: ^2.0.2+1
+  flutter_slidable: ^0.6.0
+  animator: ^3.1.0
 
 
 dev_dependencies:
