add settings, authentication

--- a/1073212575/chat_journal/pubspec.yaml
+++ b/1073212575/chat_journal/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   sqflite: ^2.0.0
   path: ^1.8.0
   path_provider: ^2.0.0
-
+  local_auth: ^1.1.7
 
 dev_dependencies:
   flutter_test:
