--- a/608754191/android/app/src/main/AndroidManifest.xml
+++ b/608754191/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.task_wtf">
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
    <application
         android:label="task_wtf"
         android:icon="@mipmap/ic_launcher">
