--- a/608754191/pubspec.yaml
+++ b/608754191/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.4
   local_auth: ^1.1.7
+  share: ^2.0.1
 
 dev_dependencies:
   flutter_test:
