--- a/608754191/pubspec.yaml
+++ b/608754191/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   image_picker: ^0.8.4
   local_auth: ^1.1.7
   share: ^2.0.1
+  animated_splash_screen: ^1.1.0
+  splashscreen:
 
 dev_dependencies:
   flutter_test:
@@ -31,7 +33,8 @@ flutter:
   uses-material-design: true
 
   assets:
-   - image/bot.png
+   - image/
+
 
 
 
