--- a/608754191/pubspec.yaml
+++ b/608754191/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   share: ^2.0.1
   animated_splash_screen: ^1.1.0
   splashscreen: ^1.3.5
+  lottie: ^1.2.1
   hashtagable:
     path: D:\Flutter\hashtagable-master\hashtagable-master
 
