--- a/1017646504/pubspec.yaml
+++ b/1017646504/pubspec.yaml
@@ -44,11 +44,13 @@ dependencies:
   hashtagable: ^2.0.2+1
   flutter_slidable: ^0.6.0
   animator: ^3.1.0
+  charts_flutter: ^0.11.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
