--- a/608754191/pubspec.yaml
+++ b/608754191/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,11 +24,14 @@ dependencies:
   share: ^2.0.1
   animated_splash_screen: ^1.1.0
   splashscreen: ^1.3.5
+  charts_flutter: ^0.11.0
   lottie: ^1.2.1
   hashtagable:
     path: D:\Flutter\hashtagable-master\hashtagable-master
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
