Add tags, splash screen; change settings

--- a/1073212575/chat_journal/pubspec.yaml
+++ b/1073212575/chat_journal/pubspec.yaml
@@ -38,10 +38,15 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.0
   local_auth: ^1.1.7
+  linkfy_text: ^1.1.5
+  share: ^2.0.4
+  animated_splash_screen: ^1.1.0
+  page_transition: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
