--- a/608754191/pubspec.yaml
+++ b/608754191/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   share: ^2.0.1
   animated_splash_screen: ^1.1.0
   splashscreen: ^1.3.5
-  charts_flutter: ^0.11.0
+  fl_chart: ^0.40.2
   lottie: ^1.2.1
   hashtagable:
     path: D:\Flutter\hashtagable-master\hashtagable-master
