--- a/608754191/pubspec.yaml
+++ b/608754191/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -25,7 +25,9 @@ dependencies:
   animated_splash_screen: ^1.1.0
   splashscreen: ^1.3.5
   fl_chart: ^0.40.2
+  charts_flutter: ^0.11.0
   lottie: ^1.2.1
+  http: ^0.13.4
   hashtagable:
     path: D:\Flutter\hashtagable-master\hashtagable-master
 
@@ -34,6 +36,10 @@ dev_dependencies:
     sdk: flutter
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.16
+  test: ^1.16.8
+
+  build_runner: ^2.0.0
 
 flutter:
   uses-material-design: true
