rename some methods and classes, organization import

--- a/608754191/pubspec.yaml
+++ b/608754191/pubspec.yaml
@@ -1,5 +1,5 @@
 name: task_wtf
-description: A new Flutter project.
+description: A Flutter project (Chat Journal) for WTF laboratory, student Egor Korshun, ID 608754191.
 
 publish_to: 'none'
 
