--- a/348699254/chat_journal/pubspec.yaml
+++ b/348699254/chat_journal/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
+  fluttertoast: ^8.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
