--- a/2782921/chat_journal/pubspec.yaml
+++ b/2782921/chat_journal/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fluro: ^2.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
