--- a/1073212575/chat_journal/pubspec.yaml
+++ b/1073212575/chat_journal/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   share: ^2.0.4
   animated_splash_screen: ^1.1.0
   page_transition: ^2.0.0
+  animations: ^2.0.2
+  rive_splash_screen: ^0.1.0
+  rive: ^0.7.33
+  flutter_staggered_animations: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - splash_screen.riv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
