--- a/283143092/pubspec.yaml
+++ b/283143092/pubspec.yaml
@@ -31,9 +31,15 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Adds the Cupertino Icons font to your application.
   cupertino_icons: ^1.0.2
+
+  # Provides internationalization methods.
+  # Additionally contains Dates, Numbers and Strings formatter.
+  intl: ^0.17.0
+
+  # Allows you manage states of the app
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
