--- a/1073212575/chat_journal/pubspec.yaml
+++ b/1073212575/chat_journal/pubspec.yaml
@@ -46,10 +46,18 @@ dependencies:
   rive_splash_screen: ^0.1.0
   rive: ^0.7.33
   flutter_staggered_animations: ^1.0.0
+  graphic: ^0.4.1
+  syncfusion_flutter_charts: ^19.3.53
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
+  flutter_driver:
+    sdk: flutter
   flutter_test:
     sdk: flutter
+  bloc_test: ^8.5.0
+  mockito: any
 
 
 # For information on the generic Dart part of this file, see the
