--- a/479714125/chat_diary/pubspec.yaml
+++ b/479714125/chat_diary/pubspec.yaml
@@ -12,6 +12,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  flutter_bloc: ^8.0.0
+  bloc: ^8.0.0
+  equatable: ^2.0.3
 
 
   cupertino_icons: ^1.0.2
