--- a/348699254/chat_journal/pubspec.yaml
+++ b/348699254/chat_journal/pubspec.yaml
@@ -23,8 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^7.0.0
   intl: ^0.17.0
   fluttertoast: ^8.0.8
+  image_picker: ^0.8.4+4
 
 
   # The following adds the Cupertino Icons font to your application.
