--- a/2782921/chat_journal/pubspec.yaml
+++ b/2782921/chat_journal/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   fluro: ^2.0.3
+  flutter_bloc: ^7.3.3
+  equatable: ^2.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
