--- a/392686006/my_chat_journal/pubspec.yaml
+++ b/392686006/my_chat_journal/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   analyzer: ^2.7.0
   intl: ^0.17.0
   image_picker: ^0.8.4+4
+  flutter_slidable: ^1.1.0
 
 dev_dependencies:
   flutter_test:
