--- a/392686006/my_chat_journal/pubspec.yaml
+++ b/392686006/my_chat_journal/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.0
+  equatable: ^2.0.3
   cupertino_icons: ^1.0.2
   analyzer: ^2.7.0
   intl: ^0.17.0
