Adding chat page

--- a/238310983/day_chat/pubspec.yaml
+++ b/238310983/day_chat/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/1.jpg
+    - assets/2.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
