Add function 'add new page', add theme

--- a/882461183/ios/Flutter/Generated.xcconfig
+++ b/882461183/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\Users\Zver\Downloads\flutter
-FLUTTER_APPLICATION_PATH=C:\dev\WTF_lessons\flutter_application_1
+FLUTTER_APPLICATION_PATH=C:\dev\WTF-Lab-Jan\882461183
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
